Add animation for journey items

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="journey-date">Spring 2021</div>
             <div class="journey-content">
                 <h3>First Study Abroad Experience</h3>
-                <p>Embarked on my first international journey as an exchange student. This experience not only broadened
+                <p>Embarked on my first international journey as an international student. This experience not only broadened
                     my academic horizons but also helped me develop independence and cross-cultural understanding while
                     adapting to a new environment.</p>
             </div>
