Update project link from webCpp to CinCout in project description

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <div class="project-item">
             <div class="project-description">
-                <h3><a href="https://github.com/Pp3ng/webCpp" target="_blank">webCpp</a></h3>
+                <h3><a href="https://github.com/Pp3ng/CinCout" target="_blank">CinCout</a></h3>
                 <p>An intuitive web-based development environment for C/C++ programming. Features real-time compilation,
                     code execution, and integrated analysis tools. Designed to help developers write better code through
                     immediate feedback on style and memory management.</p>
