immigrate to tsx !

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="周罗鹏的个人网站 - 探索技术与创意的交汇点。分享系统架构、摄影作品与技术见解，记录持续学习与成长的旅程。"
     />
-    <meta name="author" content="Penn Zhou" />
+    <meta name="author" content="Penn.L.Zhou" />
     <meta property="og:title" content="周罗鹏的个人网站" />
     <meta
       property="og:image"
@@ -15,7 +15,7 @@
     />
     <meta property="og:url" content="https://Pp3ng.github.io" />
     <meta property="og:type" content="website" />
-    <title>PENN ZHOU | Code & Create</title>
+    <title>PENN.L.ZHOU | Code & Create</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/devicon@2.14.0/devicon.min.css"
@@ -41,6 +41,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <!-- Main React App -->
-    <script type="module" src="/index.jsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
