--- a/index.html
+++ b/index.html
@@ -3,42 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="周罗鹏的个人网站 - 探索技术与创意的交汇点。分享系统架构、摄影作品与技术见解，记录持续学习与成长的旅程。"
-    />
-    <meta name="author" content="Penn.L.Zhou" />
-    <meta property="og:title" content="周罗鹏的个人网站" />
-    <meta
-      property="og:image"
-      content="https://Pp3ng.github.io/photos/my_photo.jpg"
-    />
-    <meta property="og:url" content="https://Pp3ng.github.io" />
-    <meta property="og:type" content="website" />
-    <title>PENN.L.ZHOU | Code & Create</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/devicon@2.14.0/devicon.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    />
-    <!-- Add Lightbox2 CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css"
-    />
-    <link rel="icon" href="/photos/icon.ico" type="image/x-icon" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
+    <!-- SEO metadata now handled by React Helmet -->
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <!-- Main React App -->
     <script type="module" src="/index.tsx"></script>
   </body>
