--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- SEO metadata now handled by React Helmet -->
+    <!-- React Helmet will inject SEO and metadata here -->
   </head>
   <body>
     <div id="root"></div>
