--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Basic metadata -->
+    <!-- Title -->
     <title>PENN.L.ZHOU | Code & Create</title>
 
     <!-- Favicon -->
     <link rel="icon" href="/photos/icon.ico" type="image/x-icon" />
 
-    <!-- Fonts -->
+    <!-- Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
 
-    <!-- External CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/devicon@2.14.0/devicon.min.css"
-    />
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
